Parallelize delete loading in IcebergPageSourceProvider
Delete files for a split are now loaded asynchronously on a dedicated
thread pool configured using iceberg.delete-loading-threads.
Loading is triggered on the first non-empty page from the
data source via AsyncFilteredPageSource, so splits pruned by dynamic
filters or footer row-group pruning never pay the I/O cost. The driver
waits in blocked state while deletes load, so wait time is visible in
operator stats rather than hidden in thread CPU time.